--- a/public/assets/locales/ar.json
+++ b/public/assets/locales/ar.json
@@ -1,6 +1,3 @@
 {
-    "app_title": "عنوان",
-    "language": "اللغة",
-    "welcome_message": "اهلا بكم",
-    "days_since_release": "لقد مرت {{number_of_days}} أيام على إصدار هذا الفيديو"
-  }
+    "header_search": "البحث عن طريق VIN ، اسم السيارة ، اسم العميل..."
+}
