--- a/public/assets/locales/en.json
+++ b/public/assets/locales/en.json
@@ -1,6 +1,3 @@
 {
-    "app_title": "Title",
-    "language": "Language",
-    "welcome_message": "Welcome",
-    "days_since_release": "it's been {{number_of_days}} days since this video was released"
-  }
+    "header_search": "Search by VIN, vehicle name, customer name..."
+}
